// protolint:disable MAX_LINE_LENGTH
syntax="proto3";

package proto.greet.v1;

import "buf/validate/validate.proto";

message GreetRequest {
  string  user_name = 1 [(buf.validate.field).string.min_len = 3];
}

message GreetResponse {
  string message = 1;
}

message GreetStreamingRequest {
  string user_name = 1;
}

message GreetStreamingResponse {
  string message = 1;
}

message GreetDidiStreamingRequest {
  string user_name = 1;
}

message GreetDidiStreamingResponse {
  string message = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  rpc GreetStreaming(stream GreetStreamingRequest) returns (GreetStreamingResponse) {}
  rpc GreetDidiStreaming(stream GreetDidiStreamingRequest) returns (stream GreetDidiStreamingResponse) {}
}
